--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "async",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "webpack-dev-server --devtool --inline --hot",
+    "build": "webpack",
+    "test": "mocha --compilers js:babel-register --require test/helpers/setup.js --recursive"
+  },
   "devDependencies": {
     "axios": "^0.15.3",
     "babel-jest": "^17.0.2",
     "gh-pages": "^0.12.0",
+    "img-loader": "^1.3.1",
     "jest": "^17.0.3",
     "react-scripts": "^0.6.0",
     "redux-logger": "^2.6.1"
@@ -17,9 +23,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
+    "css-loader": "^0.25.0",
     "enzyme": "^2.6.0",
     "expect": "^1.20.2",
     "jest": "^17.0.3",
+    "image-webpack-loader": "^3.1.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.2",
     "react": "^15.3.0",
@@ -30,15 +38,12 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.7.4",
     "redux-mock-store": "^1.2.1",
-    "redux-thunk": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "jest",
-    "test:watch": "npm test -- --watch",
-    "deploy": "npm run build&&gh-pages -d build"
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.2",
+    "node-sass": "^3.10.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
